Remove overflow from body to prevent scrolling

--- a/src/styles/ll-elements/elements.scss
+++ b/src/styles/ll-elements/elements.scss
@@ -4,6 +4,7 @@ html {
 
 body {
   background: $color-lll $background-texture;
+  overflow: hidden
 }
 
 header {
